2 out of 9 excercises rewrited with Unit Tests

--- a/SoloLearn.csproj
+++ b/SoloLearn.csproj
@@ -43,7 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="BasicConcepts.cs" />
+    <Compile Include="ConditionalsAndLoops.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
