Solution Fixed, 3 out of 9 excercises rewrited with unit tests.

--- a/SoloLearn/SoloLearn.csproj
+++ b/SoloLearn/SoloLearn.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="BasicConcepts.cs" />
     <Compile Include="ConditionalsAndLoops.cs" />
+    <Compile Include="Methods.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
