--- a/SoloLearn/SoloLearn.csproj
+++ b/SoloLearn/SoloLearn.csproj
@@ -43,13 +43,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ArraysAndStrings.cs" />
     <Compile Include="BasicConcepts.cs" />
+    <Compile Include="ClassesAndObjects.cs" />
     <Compile Include="ConditionalsAndLoops.cs" />
+    <Compile Include="Generics.cs" />
+    <Compile Include="InheritanceAndPolymorphism.cs" />
     <Compile Include="Methods.cs" />
+    <Compile Include="MoreOnClasses.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StructsEnumsExceptionsAndFiles.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
