--- a/SoloLearnTests/SoloLearnTests.csproj
+++ b/SoloLearnTests/SoloLearnTests.csproj
@@ -53,6 +53,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ConditionalsAndLoopsTest.cs" />
     <Compile Include="MethodsTest.cs" />
+    <Compile Include="PostTest.cs" />
+    <Compile Include="ArraysAndStringsTest.cs" />
+    <Compile Include="MoreOnClassesTest.cs" />
+    <Compile Include="StructsEnumsExceptionsAndFilesTest.cs" />
+    <Compile Include="GenericsTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
